--- a/projectsite/templates/org_list.html
+++ b/projectsite/templates/org_list.html
@@ -37,6 +37,8 @@
 										<th scope="col">Name</th>
 										<th scope="col">College</th>
 										<th scope="col">Description</th>
+                                        <th scope="col">Action</th> 
+
 									</tr>
 								</thead>
 								<tbody>
