Orgmember createdview added

--- a/projectsite/templates/member_list.html
+++ b/projectsite/templates/member_list.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="pull-right">
-                    <a href="{% url 'organization-add' %}" class="btn btn-success btn-rounded">Add Organization Membership</a>
+                    <a href="{% url 'member-add' %}" class="btn btn-success btn-rounded">Add Organization Membership</a>
                   </div>
                 </div>
               </div>              
