--- a/projectsite/templates/member_list.html
+++ b/projectsite/templates/member_list.html
@@ -46,7 +46,7 @@
 											<td>{{ object.organization }}</td>
 											<td>{{ object.date_joined }}</td>
                       <td>
-                        <a href="{% url 'organization-update' object.id %}">Edit</a>
+                        <a href="{% url 'member-update' object.id %}">Edit</a>
                         <a href="organization_list/{{ object.id }}/delete" class="text-danger">Delete</a>
                       </td>
                       </tr>
