--- a/projectsite/templates/member_list.html
+++ b/projectsite/templates/member_list.html
@@ -47,7 +47,7 @@
 											<td>{{ object.date_joined }}</td>
                       <td>
                         <a href="{% url 'member-update' object.id %}">Edit</a>
-                        <a href="organization_list/{{ object.id }}/delete" class="text-danger">Delete</a>
+                        <a href="member_list/{{ object.id }}/delete" class="text-danger">Delete</a>
                       </td>
                       </tr>
                       {% empty %}
