Student List View Added

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -137,7 +137,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="tables.html">
+							<a href="{% url 'student-list' %}"></a>
 								<i class="la la-th"></i>
 								<p>Student</p>
 							</a>
