--- a/projectsite/templates/college_list.html
+++ b/projectsite/templates/college_list.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="pull-right">
-                    <a href="{% url 'organization-add' %}" class="btn btn-success btn-rounded">Add Organization</a>
+                    <a href="{% url 'college-add' %}" class="btn btn-success btn-rounded">Add College</a>
                   </div>
                 </div>
               </div>              
@@ -46,8 +46,9 @@
 											<td>{{ object.created_at }}</td>
 											<td>{{ object.updated_at }}</td>
                       <td>
-                        <a href="{% url 'organization-update' object.id %}">Edit</a>
-                        <a href="organization_list/{{ object.id }}/delete" class="text-danger">Delete</a>
+                        <a href="{% url 'college-update' object.id %}">Edit</a>
+						<a href="college_list/{{ object.id }}/delete" class="text-danger">Delete</a>
+             
                       </td>
                       </tr>
                       {% empty %}
