CreateView, Program List Form Added in Program, Changed Typography in base.html to program

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -149,9 +149,9 @@
 							</a>
 						</li>
 						<li class="nav-item active">
+							<a href="{% url 'program-list' %}"></a>
 
-							<p>Typography</p>
-								<span class="badge badge-danger">25</span>
+							<p>Program</p>
 							</a>
 
 							</ul>
