Relocated home url to dashboard

--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -119,7 +119,7 @@
 							</div>
 						<div class="info">
 							<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
-								<a href="index.html">
+								<a href="{% url 'home' %}"></a>
 								<i class="la la-dashboard"></i>
 								<p>Dashboard</p>
 								</a>
@@ -148,7 +148,7 @@
 								<p>College</p>
 							</a>
 						</li>
-						<li class="nav-item active">
+						<li class="nav-item"></li>
 							<a href="{% url 'program-list' %}"></a>
 
 							<p>Program</p>
