--- a/projectsite/templates/base.html
+++ b/projectsite/templates/base.html
@@ -78,8 +78,8 @@
 										</a>
 										<a href="#">
 											<div class="notif-img"> 
-												<img src="assets/img/profile2.jpg" alt="Img Profile">
-											</div>
+												<img src="{% static 'img/profile2.jpg' %}" alt="Img Profile">
+												</div>
 											<div class="notif-content">
 												<span class="block">
 													Reza send messages to you
