--- a/projectsite/templates/student_list.html
+++ b/projectsite/templates/student_list.html
@@ -6,7 +6,7 @@
 				<div class="col-md-12">
 					<div class="card">
 						<div class="card-header">
-							<div class="card-title">List of Organizations</div>
+							<div class="card-title">List of Students</div>
 							<div class="card-category">Page Subtitle</div>
               <br />
               <div class="col-md-12 row">
