--- a/projectsite/templates/org_list.html
+++ b/projectsite/templates/org_list.html
@@ -12,7 +12,7 @@
                               <br />
               <div class="col-md-12 row">
                 <div class="col-md-6">
-                  <form class="navbar-left navbar-form nav-search mr-md-3" action="{% url 'organization-list' 21 %}"> 
+                  <form class="navbar-left navbar-form nav-search mr-md-3" action="{% url 'organization-list'%}"> 
                     <div class="input-group">
                       <input type="text" placeholder="Search ..." class="form-control" name="q" /> 
                       <div class="input-group-append">
@@ -47,12 +47,12 @@
 											<td>{{ object.name }}</td>
 											<td>{{ object.college }}</td>
 											<td>{{ object.description }}</td>
-                                            <td>
-                                           <div style="display: flex; gap: 10px;">
-											<a href="organization_list/{{ object.id }}">Edit</a>
-											<a href="organization_list/{{ object.id }}/delete" class="text-danger">Delete</a>
-										   </div>
-                                        </td>
+                                <td>
+									<div style="display: flex; gap: 10px;">
+										<a href="{% url 'organization-update' object.id %}">Edit</a>
+										<a href="organization_list/{{ object.id }}/delete" class="text-danger">Delete</a>
+									</div>
+								</td>
                       </tr>
                       {% empty %}
                       <tr>
