Fix add and submit button

--- a/projectsite/templates/program_list.html
+++ b/projectsite/templates/program_list.html
@@ -22,6 +22,12 @@
 				</div>
 				</form>
 			  </div>
+			  <div class="col-md-6">
+                  <div class="pull-right">
+                    <a href="{% url 'program-add' %}" class="btn btn-success btn-rounded">Add New Program</a>
+                  </div>
+                </div>
+              </div>
 			<div class="col-md-12">
 				<form method="get" class="row g-2 align-items-center">
 					<div class="col-auto">
